// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphEdge.vue snapshot connected 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="1"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#222"
    stroke-width="5"
  />
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="orange"
    stroke-width="4"
  />
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphEdge.vue snapshot connecting 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="0.5"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#222"
    stroke-width="5"
  />
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="orange"
    stroke-width="4"
  />
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphEdge.vue snapshot initial 1`] = `
<g
  class="edge"
  data-type="edge"
  stroke-opacity="1"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#222"
    stroke-width="5"
  />
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#888"
    stroke-width="4"
  />
  <path
    class="highlight"
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#888"
    stroke-width="9"
  />
</g>
`;
